[gd_scene load_steps=14 format=2]

[ext_resource path="res://Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/MariaElisasHand.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/tutorial_01.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
border_color = Color( 1, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 12

[sub_resource type="DynamicFont" id=2]
size = 56
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.639648, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.945313, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.462745, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0540161, 0.691406, 0.323259, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0671539, 0.955078, 0.442225, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0313726, 0.486275, 0.223529, 1 )

[node name="Tutorial" type="Panel"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -498.568
margin_top = -300.0
margin_right = 501.432
margin_bottom = 300.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 950.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 2 )
text = "Tutorial"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 950.0
margin_bottom = 128.0
size_flags_vertical = 3

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 134.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Kembali"

[node name="Page" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 138.0
margin_right = 810.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 5.0
custom_fonts/font = SubResource( 7 )
text = "1"
align = 1
valign = 1

[node name="Forward" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 814.0
margin_right = 950.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 6 )
text = "Lanjut ->"

[node name="TutorialPicture" type="TextureRect" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 950.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Forward" to="." method="_on_Foward_pressed"]
